syntax = "proto3";

package aspb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message AnimeSerieRequest {
    string originalTitle = 1;
    google.protobuf.Timestamp aired = 2;
    int32 releaseYear = 3;
    string rating = 4;
    string portriatPoster = 5;
    string portriatBlurHash = 6;
    string landscapePoster = 7;
    string landscapeBlurHash = 8;
}

message AnimeSerieResponse {
    int64 ID = 1;
    string originalTitle = 2;
    google.protobuf.Timestamp aired = 3;
    int32 releaseYear = 4;
    string rating = 5;
    string portriatPoster = 6;
    string portriatBlurHash = 7;
    string landscapePoster = 8;
    string landscapeBlurHash = 9;
    google.protobuf.Timestamp createdAt = 10;
}