syntax = "proto3";

package aspb;

import "aspb/anime_serie.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message GetAllAnimeSeriesRequest {
    int32 pageNumber = 1;
    int32 pageSize = 2;
    optional int32 year = 3;
}

message GetAllAnimeSeriesResponse { 
    repeated AnimeSerieResponse AnimeSeries = 1;
}